--- a/index.html
+++ b/index.html
@@ -12,50 +12,46 @@
     <h1 class="text-center my-2 fw-bold mb-0">Registration Form:-</h1>
     <!-- <form id="regform" class="text-center mt-3" action=""> -->
        <div class="text-center mt-3">
-
            <label class="d-block" for="firstname">First Name:<br>
-            <input placeholder="Enter First Name" required class="py-1 px-5 my-2" type="text" name="name" id="registration1">
+            <input required placeholder="Enter First Name"  class="py-1 px-5 my-2" type="text" name="name" id="registration1">
         </label>
         <label class="d-block" for="lastname">Last Name:<br>
-            <input placeholder="Enter Last Name" required class="py-1 px-5 my-2" type="text" name="name" id="registration2">
+            <input required placeholder="Enter Last Name" class="py-1 px-5 my-2" type="text" name="name" id="registration2">
         </label>
         <label class="d-block" for="emailaddress">Email Address:<br>
-            <input placeholder="Enter Email Address" required class="py-1 px-5 my-2" type="email" name="name" id="registration3">
+            <input required placeholder="Enter Email Address" class="py-1 px-5 my-2" type="email" name="name" id="registration3">
         </label>
         <label class="d-block" for="password">Password:<br>
-            <input placeholder="Enter Password" required class="py-1 px-5 my-2 inp" type="password" name="name" id="registration4">
+            <input required placeholder="Enter Password" class="py-1 px-5 my-2 inp" type="password" name="name" id="registration4">
         </label>
         <label class="d-block" for="contactnumber">Contact Number:<br>
-            <input placeholder="Enter Contact Number" required class="py-1 px-5 my-2" type="number" name="name" id="registration5">
+            <input required placeholder="Enter Contact Number"  class="py-1 px-5 my-2" type="number" name="name" id="registration5">
         </label>
         <label class="d-block" for="name">CNIC:<br>
-            <input placeholder="Enter CNIC" required class="py-1 px-5 my-2" type="number" name="name" id="registration6">
+            <input required placeholder="Enter CNIC"  class="py-1 px-5 my-2" type="number" name="name" id="registration6">
         </label>
         <label class="d-block" for="lastqualification">Last Qualification:<br>
             <select required class="py-1 px-5 me-0 ms-1 my-2 inp" name="courseselect" id="registration7">
-                <option selected value="selectcourse">Select Last Qualification</option>
-                <option value="undermatric">Under Matric</option>
-                <option value="matric">Matric</option>
-                <option value="intermediate">Intermediate</option>
-                <option value="bachelors">Bachelors</option>
-                <option value="masters/phd">Masters/PHD</option>
+                <option selected value="NAN">Select Last Qualification</option>
+                <option value="Under Matric">Under Matric</option>
+                <option value="Matric">Matric</option>
+                <option value="Intermediate">Intermediate</option>
+                <option value="Bachelors">Bachelors</option>
+                <option value="Masters/PHD">Masters/PHD</option>
             </select>
         </label>
         <label class="d-block" for="course">Course:<br>
             <select required class="py-1 px-1 my-2 inp text-" name="courseselect" id="registration8">
-                <option selected value="selectcourse">Select Course</option>
-                <option value="webdevelopment">Web and Mobile App Development</option>
-                <option value="appdevelopment">Flutter App Development</option>
-                <option value="graphicdesigning">Graphic Designing</option>
-                <option value="digitalmarketing">Digital Marketing</option>
+                <option selected value="NAN">Select Course</option>
+                <option value="Web and Mobile App Development">Web and Mobile App Development</option>
+                <option value="Flutter App Development">Flutter App Development</option>
+                <option value="Graphic Designing">Graphic Designing</option>
+                <option value="Digital Marketing">Digital Marketing</option>
             </select>
         </label>
         <button onclick="saveValue()" class="btn btn-outline-success text-white px-5 my-2 py-2">Submit</button>
     </div>
     <!-- </form> -->
-<div id="parent" >
-        <ol class="bg-dark"></ol>
-</div>
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
